# crow

./: .gitignore  .gitmodules  README.md  __init__.py  compile.sh  connection.py  crow.py  handler.py  protocol.py  pyproject.toml  replay.py  requirements.txt  test.py
.github/workflows/: test.yml  tests.yaml
crow/: __init__.py  connection.py  crow.py  passwordhasher.py  test.py
crow/pb/: admin_commands_pb2.py  color_pb2.py  (+154 more)
pb/: __init__.py  admin_commands_pb2.py  card_attributes_pb2.py  color_pb2.py  command_attach_card_pb2.py  command_change_zone_properties_pb2.py  command_concede_pb2.py  command_create_arrow_pb2.py  command_create_counter_pb2.py  command_create_token_pb2.py  command_deck_del_dir_pb2.py  command_deck_del_pb2.py  command_deck_download_pb2.py  command_deck_list_pb2.py  command_deck_new_dir_pb2.py  command_deck_select_pb2.py  command_deck_upload_pb2.py  command_del_counter_pb2.py  command_delete_arrow_pb2.py  command_draw_cards_pb2.py  command_dump_zone_pb2.py  command_flip_card_pb2.py  command_game_say_pb2.py  command_inc_card_counter_pb2.py  command_inc_counter_pb2.py  command_kick_from_game_pb2.py  command_leave_game_pb2.py  command_move_card_pb2.py  command_mulligan_pb2.py  command_next_turn_pb2.py  command_ready_start_pb2.py  command_replay_delete_match_pb2.py  command_replay_download_pb2.py  command_replay_list_pb2.py  command_replay_modify_match_pb2.py  command_reveal_cards_pb2.py  command_reverse_turn_pb2.py  command_roll_die_pb2.py  command_set_active_phase_pb2.py  command_set_card_attr_pb2.py  (+119 more)
tests/: test_registration.py  test_server.py
